--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         auth: {
           clientId: "0652ef4a-cd47-4994-91ac-afbb86a8a2ba",
           authority: "https://login.microsoftonline.com/ae0b754a-1500-4ce6-b39e-59d483b9ae9c",
-          redirectUri: window.location.origin,
+          redirectUri: window.location.origin + window.location.pathname.replace(/\/$/, ""),
         },
         cache: { cacheLocation: "sessionStorage", storeAuthStateInCookie: true },
       });
@@ -123,7 +123,7 @@ function getMsal() {
       auth: {
         clientId: MSAL_CLIENT_ID,
         authority: `https://login.microsoftonline.com/${MSAL_TENANT_ID}`,
-        redirectUri: window.location.origin,
+        redirectUri: window.location.origin + window.location.pathname.replace(/\/$/, ""),
       },
       cache: { cacheLocation: "sessionStorage", storeAuthStateInCookie: true },
     });
