--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ function EditModal({ reg, empresas, onSave, onClose }) {
 const DIAS = ["lunes","martes","miércoles","jueves","viernes","sábado","domingo"];
 const DIAS_SHORT = ["Lun","Mar","Mié","Jue","Vie","Sáb","Dom"];
 
-function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, topBar }) {
+function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, topBar, showExportExterno, onCloseExportExterno }) {
   const [filtroEmpId, setFiltroEmpId]   = useState("");
   const [filtroSedeId, setFiltroSedeId] = useState("");
   const [showForm, setShowForm]         = useState(false);
@@ -896,6 +896,10 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
   const [exportFiltro, setExportFiltro] = useState("todo");
   const [exportSedeId, setExportSedeId] = useState("");
   const [exportEmpId, setExportEmpId]   = useState("");
+
+  // Sincronizar con el botón externo del header
+  const exportVisible = showExport || showExportExterno;
+  const closeExport = () => { setShowExport(false); if (onCloseExportExterno) onCloseExportExterno(); };
 
   const empActivas   = empresas.filter(e => e.activa);
   const sedesActivas = sedes.filter(s => s.activa);
@@ -946,7 +950,7 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
     el.href = url; el.download = `Canaveral_Acuerdos_${sufijo}_${fecha}.csv`;
     document.body.appendChild(el); el.click();
     document.body.removeChild(el); URL.revokeObjectURL(url);
-    setShowExport(false);
+    closeExport();
   };
 
   // Resumen contextual según filtro activo
@@ -1009,18 +1013,19 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
       {topBar}
 
       {/* Modal exportar */}
-      {showExport && (
+      {exportVisible && (
         <div style={{ position: "fixed", inset: 0, background: "rgba(0,0,0,.55)", zIndex: 500, display: "flex", alignItems: "center", justifyContent: "center", padding: 20 }}
-          onClick={e => e.target === e.currentTarget && setShowExport(false)}>
-          <div style={{ background: "#fff", borderRadius: 18, width: "100%", maxWidth: 440, overflow: "hidden", boxShadow: "0 24px 64px rgba(0,0,0,.25)" }}>
-            <div style={{ background: "#05200b", padding: "18px 22px", display: "flex", justifyContent: "space-between", alignItems: "center" }}>
+          onClick={e => e.target === e.currentTarget && closeExport()}>
+          <div style={{ background: "#fff", borderRadius: 18, width: "100%", maxWidth: 440, maxHeight: "85vh", display: "flex", flexDirection: "column", boxShadow: "0 24px 64px rgba(0,0,0,.25)" }}>
+            {/* Header fijo */}
+            <div style={{ background: "#05200b", padding: "18px 22px", display: "flex", justifyContent: "space-between", alignItems: "center", borderRadius: "18px 18px 0 0", flexShrink: 0 }}>
               <div style={{ color: "#fff", fontWeight: 800, fontSize: 17 }}>📊 Exportar Acuerdos</div>
-              <button onClick={() => setShowExport(false)} style={{ background: "rgba(255,255,255,.15)", border: "none", color: "#fff", width: 30, height: 30, borderRadius: 8, cursor: "pointer", fontWeight: 800 }}>✕</button>
+              <button onClick={closeExport} style={{ background: "rgba(255,255,255,.15)", border: "none", color: "#fff", width: 30, height: 30, borderRadius: 8, cursor: "pointer", fontWeight: 800 }}>✕</button>
             </div>
-            <div style={{ padding: 22 }}>
+            {/* Contenido con scroll */}
+            <div style={{ padding: 22, overflowY: "auto", flex: 1 }}>
               <p style={{ fontSize: 13, color: T.slate, marginBottom: 16 }}>Selecciona qué acuerdos incluir en el Excel:</p>
 
-              {/* Opciones */}
               {[
                 { k: "todo",    label: "🌐 Toda la compañía",   desc: `${acuerdos.length} acuerdos` },
                 { k: "sede",    label: "📍 Filtrar por sede",    desc: "Solo una sede" },
@@ -1030,7 +1035,7 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
                   style={{ display: "flex", alignItems: "center", gap: 12, padding: "12px 14px", borderRadius: 10, marginBottom: 8, cursor: "pointer",
                     background: exportFiltro === op.k ? T.amberLight : T.bg,
                     border: `2px solid ${exportFiltro === op.k ? T.amber : T.border}` }}>
-                  <div style={{ width: 18, height: 18, borderRadius: "50%", border: `2px solid ${exportFiltro === op.k ? T.amber : T.border}`, display: "flex", alignItems: "center", justifyContent: "center" }}>
+                  <div style={{ width: 18, height: 18, borderRadius: "50%", border: `2px solid ${exportFiltro === op.k ? T.amber : T.border}`, display: "flex", alignItems: "center", justifyContent: "center", flexShrink: 0 }}>
                     {exportFiltro === op.k && <div style={{ width: 9, height: 9, borderRadius: "50%", background: T.amber }} />}
                   </div>
                   <div>
@@ -1040,7 +1045,6 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
                 </div>
               ))}
 
-              {/* Selector sede */}
               {exportFiltro === "sede" && (
                 <select value={exportSedeId} onChange={e => setExportSedeId(e.target.value)}
                   style={{ width: "100%", padding: "10px 12px", borderRadius: 8, border: `1.5px solid ${T.border}`, fontSize: 14, background: "#fff", color: T.navy, marginTop: 4 }}>
@@ -1051,7 +1055,6 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
                 </select>
               )}
 
-              {/* Selector empresa */}
               {exportFiltro === "empresa" && (
                 <select value={exportEmpId} onChange={e => setExportEmpId(e.target.value)}
                   style={{ width: "100%", padding: "10px 12px", borderRadius: 8, border: `1.5px solid ${T.border}`, fontSize: 14, background: "#fff", color: T.navy, marginTop: 4 }}>
@@ -1062,7 +1065,7 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
                 </select>
               )}
 
-              <div style={{ marginTop: 8, padding: "10px 14px", background: "#f0fdf4", borderRadius: 8, fontSize: 12, color: "#166534" }}>
+              <div style={{ marginTop: 12, padding: "10px 14px", background: "#f0fdf4", borderRadius: 8, fontSize: 12, color: "#166534" }}>
                 💡 Se descarga como <strong>.csv</strong> — Excel lo abre directo con todas las columnas organizadas
               </div>
 
@@ -1338,6 +1341,7 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
   const [sidebarOpen, setSidebarOpen] = useState(true);
   const [showForm, setShowForm] = useState(false);
   const [showExportModal, setShowExportModal] = useState(false);
+  const [showAcuerdosExport, setShowAcuerdosExport] = useState(false);
   const [showComercialPanel, setShowComercialPanel] = useState(false);
   const [exporting, setExporting] = useState(false);
   const [activeTab, setActiveTab] = useState("movimientos");
@@ -1568,7 +1572,7 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
               cursor: "pointer", fontWeight: 800, fontSize: 12, display: "flex", alignItems: "center", gap: 5
             }}>+ Nuevo Registro</button>
           )}
-          <button onClick={() => setShowExportModal(true)} style={{
+          <button onClick={() => activeTab === "acuerdos" ? setShowAcuerdosExport(true) : setShowExportModal(true)} style={{
             background: "#16a34a", border: "none", color: "#fff",
             padding: "7px 14px", borderRadius: 8, cursor: "pointer", fontWeight: 700, fontSize: 12,
             display: "flex", alignItems: "center", gap: 5
@@ -1941,6 +1945,8 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
                 sedes={sedes}
                 onUpdateAcuerdos={onUpdateAcuerdos}
                 canEdit={!isViewer}
+                showExportExterno={showAcuerdosExport}
+                onCloseExportExterno={() => setShowAcuerdosExport(false)}
               />
             )}
 
@@ -2114,7 +2120,7 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
       {showExportModal && (
         <div style={{ position:"fixed", inset:0, background:"rgba(0,0,0,.6)", zIndex:200, display:"flex", alignItems:"center", justifyContent:"center", padding:20 }}
           onClick={e => e.target===e.currentTarget && setShowExportModal(false)}>
-          <div className="fade-in" style={{ background:T.white, borderRadius:20, width:"100%", maxWidth:480, boxShadow:"0 24px 64px rgba(0,0,0,.25)", overflow:"hidden" }}>
+          <div className="fade-in" style={{ background:T.white, borderRadius:20, width:"100%", maxWidth:480, maxHeight:"85vh", display:"flex", flexDirection:"column", boxShadow:"0 24px 64px rgba(0,0,0,.25)" }}>
 
             {/* Header */}
             <div style={{ background:"#05200b", padding:"20px 24px", display:"flex", justifyContent:"space-between", alignItems:"center" }}>
@@ -2134,7 +2140,7 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
               <button onClick={() => setShowExportModal(false)} style={{ background:"rgba(255,255,255,.15)", border:"none", color:"#fff", width:32, height:32, borderRadius:8, cursor:"pointer", fontSize:18 }}>×</button>
             </div>
 
-            <div style={{ padding:24 }}>
+            <div style={{ padding:24, overflowY:"auto", flex:1 }}>
               {/* Rango de fecha en el modal */}
               <div style={{ marginBottom:20, background:T.bg, borderRadius:12, padding:14, border:`1px solid ${T.border}` }}>
                 <p style={{ fontSize:12, fontWeight:800, color:T.brand, textTransform:"uppercase", letterSpacing:.5, marginBottom:10 }}>📅 Rango de fechas para la descarga</p>
