--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@ function AcuerdosView({ acuerdos, empresas, sedes, onUpdateAcuerdos, canEdit, to
       {exportVisible && (
         <div style={{ position: "fixed", inset: 0, background: "rgba(0,0,0,.55)", zIndex: 500, display: "flex", alignItems: "center", justifyContent: "center", padding: 20 }}
           onClick={e => e.target === e.currentTarget && closeExport()}>
-          <div style={{ background: "#fff", borderRadius: 18, width: "100%", maxWidth: 440, maxHeight: "85vh", display: "flex", flexDirection: "column", boxShadow: "0 24px 64px rgba(0,0,0,.25)" }}>
+          <div style={{ background: "#fff", borderRadius: 18, width: "100%", maxWidth: 440, maxHeight: "85vh", display: "flex", flexDirection: "column", boxShadow: "0 24px 64px rgba(0,0,0,.25)", overflow: "hidden" }}>
             {/* Header fijo */}
             <div style={{ background: "#05200b", padding: "18px 22px", display: "flex", justifyContent: "space-between", alignItems: "center", borderRadius: "18px 18px 0 0", flexShrink: 0 }}>
               <div style={{ color: "#fff", fontWeight: 800, fontSize: 17 }}>📊 Exportar Acuerdos</div>
@@ -2120,7 +2120,7 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
       {showExportModal && (
         <div style={{ position:"fixed", inset:0, background:"rgba(0,0,0,.6)", zIndex:200, display:"flex", alignItems:"center", justifyContent:"center", padding:20 }}
           onClick={e => e.target===e.currentTarget && setShowExportModal(false)}>
-          <div className="fade-in" style={{ background:T.white, borderRadius:20, width:"100%", maxWidth:480, maxHeight:"85vh", display:"flex", flexDirection:"column", boxShadow:"0 24px 64px rgba(0,0,0,.25)" }}>
+          <div className="fade-in" style={{ background:T.white, borderRadius:20, width:"100%", maxWidth:480, maxHeight:"85vh", display:"flex", flexDirection:"column", boxShadow:"0 24px 64px rgba(0,0,0,.25)", overflow:"hidden" }}>
 
             {/* Header */}
             <div style={{ background:"#05200b", padding:"20px 24px", display:"flex", justifyContent:"space-between", alignItems:"center" }}>
@@ -2329,9 +2329,11 @@ function AdminPanel({ user, sedes, empresas, admins, viewers, guardias, comercia
   const [newGuardiaSedeId, setNewGuardiaSedeId] = useState("");
   const [newComercial, setNewComercial] = useState("");
   const [empSearch, setEmpSearch] = useState("");
+  const [sedeSearch, setSedeSearch] = useState("");
 
   const sedesActivas = sedes.filter(s => s.activa);
-  const empFilt = empresas.filter(e => e.nombre.toLowerCase().includes(empSearch.toLowerCase()));
+  const empFilt  = empresas.filter(e => e.nombre.toLowerCase().includes(empSearch.toLowerCase()));
+  const sedeFilt = sedes.filter(s => s.nombre.toLowerCase().includes(sedeSearch.toLowerCase()));
 
   return (
     <div style={{ minHeight: "100vh", background: T.bg }}>
@@ -2476,21 +2478,35 @@ function AdminPanel({ user, sedes, empresas, admins, viewers, guardias, comercia
               </div>
             </div>
             <div style={{ background: T.white, borderRadius: 14, overflow: "hidden", border: `1px solid ${T.border}` }}>
-              {sedes.map(s => (
-                <div key={s.id} style={{ display: "flex", justifyContent: "space-between", alignItems: "center", padding: "11px 16px", borderBottom: `1px solid ${T.border}` }}>
-                  <span style={{ fontSize: 13, color: s.activa ? T.navyMid : T.muted }}>{s.nombre}</span>
-                  <div style={{ display: "flex", gap: 6 }}>
-                    <button onClick={() => onUpdateSedes(sedes.map(x => x.id === s.id ? { ...x, activa: !x.activa } : x))}
-                      style={{ padding: "4px 12px", borderRadius: 20, border: "none", cursor: "pointer", fontSize: 11, fontWeight: 700, background: s.activa ? T.redLight : T.greenLight, color: s.activa ? T.red : T.green }}>
-                      {s.activa ? "Desactivar" : "Activar"}
-                    </button>
-                    <button onClick={() => { if (window.confirm(`¿Eliminar la sede "${s.nombre}"? Esta acción no se puede deshacer.`)) onUpdateSedes(sedes.filter(x => x.id !== s.id)); }}
-                      style={{ padding: "4px 10px", borderRadius: 20, border: "none", cursor: "pointer", fontSize: 11, fontWeight: 700, background: "#fee2e2", color: "#b91c1c" }}>
-                      🗑️
-                    </button>
+              <div style={{ padding: "12px 16px", borderBottom: `1px solid ${T.border}`, display: "flex", justifyContent: "space-between", alignItems: "center" }}>
+                <span style={{ fontSize: 13, fontWeight: 700, color: T.slate }}>
+                  {sedes.filter(s => s.activa).length} activas · {sedes.filter(s => !s.activa).length} inactivas
+                </span>
+                <input value={sedeSearch} onChange={e => setSedeSearch(e.target.value)} placeholder="Buscar..."
+                  style={{ padding: "6px 10px", borderRadius: 8, border: `1px solid ${T.border}`, fontSize: 13, width: 140 }} />
+              </div>
+              <div style={{ maxHeight: 420, overflowY: "auto" }}>
+                {sedeFilt.map(s => (
+                  <div key={s.id} style={{ display: "flex", justifyContent: "space-between", alignItems: "center", padding: "11px 16px", borderBottom: `1px solid ${T.border}` }}>
+                    <span style={{ fontSize: 13, color: s.activa ? T.navyMid : T.muted, textDecoration: s.activa ? "none" : "line-through" }}>{s.nombre}</span>
+                    <div style={{ display: "flex", gap: 6 }}>
+                      <button onClick={() => onUpdateSedes(sedes.map(x => x.id === s.id ? { ...x, activa: !x.activa } : x))}
+                        style={{ padding: "4px 12px", borderRadius: 20, border: "none", cursor: "pointer", fontSize: 11, fontWeight: 700, background: s.activa ? T.redLight : T.greenLight, color: s.activa ? T.red : T.green }}>
+                        {s.activa ? "Desactivar" : "Activar"}
+                      </button>
+                      <button onClick={() => { if (window.confirm(`¿Eliminar "${s.nombre}"? Esta acción no se puede deshacer.`)) onUpdateSedes(sedes.filter(x => x.id !== s.id)); }}
+                        style={{ padding: "4px 10px", borderRadius: 20, border: "none", cursor: "pointer", fontSize: 11, fontWeight: 700, background: "#fee2e2", color: "#b91c1c" }}>
+                        🗑️
+                      </button>
+                    </div>
                   </div>
-                </div>
-              ))}
+                ))}
+                {sedeFilt.length === 0 && (
+                  <div style={{ padding: "24px", textAlign: "center", color: T.muted, fontSize: 13 }}>
+                    {sedeSearch ? `Sin resultados para "${sedeSearch}"` : "No hay sedes registradas"}
+                  </div>
+                )}
+              </div>
             </div>
           </div>
         )}
