--- a/index.html
+++ b/index.html
@@ -276,6 +276,58 @@ function useSharedStorage(key, initial) {
   return [val, save, loaded];
 }
 
+// ─── Font & Global Styles ─────────────────────────────────────────────────────
+if (typeof document !== "undefined") {
+  const l = document.createElement("link");
+  l.rel = "stylesheet";
+  l.href = "https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500&display=swap";
+  document.head.appendChild(l);
+  const s = document.createElement("style");
+  s.textContent = `
+    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: 'Plus Jakarta Sans', sans-serif; -webkit-font-smoothing: antialiased; }
+    ::-webkit-scrollbar { width: 6px; } ::-webkit-scrollbar-track { background: transparent; }
+    ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 3px; }
+    select { font-family: 'Plus Jakarta Sans', sans-serif; }
+    input  { font-family: 'Plus Jakarta Sans', sans-serif; }
+    @keyframes fadeIn { from { opacity:0; transform:translateY(6px); } to { opacity:1; transform:translateY(0); } }
+    @keyframes spin   { to { transform: rotate(360deg); } }
+    .fade-in { animation: fadeIn .25s ease-out; }
+    .pulse-dot { width:8px;height:8px;background:#7dd105;border-radius:50%;animation:pulse 2s infinite; }
+    @keyframes pulse { 0%,100%{opacity:1;transform:scale(1)} 50%{opacity:.6;transform:scale(1.3)} }
+  `;
+  document.head.appendChild(s);
+}
+
+// ─── Logo ─────────────────────────────────────────────────────────────────────
+const LOGO_SRC = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%231C5A2A'/%3E%3Ctext x='50' y='67' font-size='52' text-anchor='middle' fill='%237dd105' font-family='Arial' font-weight='900'%3ESC%3C/text%3E%3C/svg%3E";
+
+// ─── Initial Data ─────────────────────────────────────────────────────────────
+const SEDES_INIT = [
+  "Norte","Sur","Este","Oeste","Centro","Laureles","Envigado","Itagüí",
+  "Bello","Sabaneta","La Estrella","Caldas","Copacabana","Girardota",
+  "Barbosa","Rionegro","La Ceja","El Retiro","Marinilla","Guarne",
+  "San Pedro","Pradera","Fontibón","Soacha","Zipaquirá"
+].map((n, i) => ({ id: `s${i+1}`, nombre: `Sede ${n}`, activa: true }));
+
+const EMPRESAS_INIT = [
+  "Distribuidora ABC","Comercial XYZ","Proveedora Sur","Industrias Norte",
+  "Grupo Comercial","Distribuciones Rápidas","Mercados Unidos","Cadena Sur",
+  "Logística Express","Suministros del Valle","Proveedor Nacional",
+  "Abastecedora Central","Comercio Andino","Red de Distribución","Marca Propia SA",
+  "Alianza Comercial","Mayoristas Unidos","Distribuidora Costa",
+  "Importaciones Sur","Exportaciones Norte","Comercial Pacífico",
+  "Grupo Empresarial","Cadena de Valor","Soluciones Logísticas",
+  "Network Comercial","Plaza Distribuciones","Macro Suministros",
+  "Global Trade CO","Distribuidora Elite","Fast Delivery","Mercado Directo",
+].map((n, i) => ({ id: `e${i+1}`, nombre: n, activa: true }));
+
+// ─── Utils ────────────────────────────────────────────────────────────────────
+const fmtDate     = ts => new Date(ts).toLocaleDateString("es-CO",  { day:"2-digit", month:"2-digit", year:"numeric" });
+const fmtTime     = ts => new Date(ts).toLocaleTimeString("es-CO",  { hour:"2-digit", minute:"2-digit" });
+const fmtDateLong = ts => new Date(ts).toLocaleDateString("es-CO",  { weekday:"long", day:"numeric", month:"long", year:"numeric" });
+const fmtDuracion = m  => m >= 60 ? `${Math.floor(m/60)}h ${m%60}m` : `${m}m`;
+
 // ─── Theme ────────────────────────────────────────────────────────────────────
 const T = {
   navy:       "#05200b",
