--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ function SecurityView({ user, sedes, empresas, registros, onNuevoRegistro, onLog
       <div style={{ padding: 20 }}>
         <button onClick={() => setShowForm(true)} style={{
           width: "100%", padding: "22px", borderRadius: 16, border: "none",
-          background: `linear-gradient(135deg, ${T.brand} 0%, ${T.brandAccent} 100%)`,
+          background: `linear-gradient(135deg, ${T.brand} 0%, #5aad00 100%)`,
           color: T.navy, fontSize: 22, fontWeight: 900, cursor: "pointer",
           boxShadow: "0 6px 24px rgba(245,158,11,.4)",
           display: "flex", alignItems: "center", justifyContent: "center", gap: 14,
