--- a/index.html
+++ b/index.html
@@ -185,6 +185,21 @@
     }
 
     /* ── Siempre mostrar .mc-btn-icon en desktop ── */
+
+    /* ════════════════════════════════
+       LANDSCAPE MÓVIL — Admin Panel fix
+       Reduce header altura para que quede espacio al contenido
+    ════════════════════════════════ */
+    @media (max-height: 499px) {
+      /* Header sticky más compacto */
+      [data-panel-header="true"] { padding: 6px 12px !important; }
+      /* Tabs más compactos */
+      [data-panel-tabs="true"] button { padding: 6px 8px !important; font-size: 11px !important; }
+      /* Las listas internas usan menos vh */
+      [data-panel-list="true"] { max-height: 35vh !important; }
+      /* Ocultar descripción larga en landscape */
+      [data-panel-desc="true"] { display: none !important; }
+    }
     @media (min-width: 1024px) {
       .mc-btn-icon { display: none !important; }
       .mc-btn-label { display: inline !important; }
@@ -1949,7 +1964,10 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
   const [filterTipo, setFilterTipo] = useState("");
   const [filterStatus, setFilterStatus] = useState("");
 
+  const { mobile, tablet } = useBreakpoint();
+  // Sidebar: cerrado por defecto en móvil
   const [sidebarOpen, setSidebarOpen] = useState(true);
+  useEffect(() => { if (mobile) setSidebarOpen(false); }, [mobile]);
 
   const sedesEnUso = sedes.filter(s => s.activa && registros.some(r => r.sedeId === s.id));
   const empresasEnUso = empresas.filter(e => e.activa && registros.some(r => r.proveedorId === e.id));
@@ -2206,7 +2224,26 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
       <div style={{ display: "flex", flex: 1, overflow: "hidden" }}>
         {/* Sidebar */}
         {sidebarOpen && activeTab !== "acuerdos" && activeTab !== "cumplimiento" && (
-          <div data-sidebar="true" style={{ width: 260, background: T.white, borderRight: `1px solid ${T.border}`, padding: 20, overflowY: "auto", flexShrink: 0 }}>
+          <>
+            {/* Overlay para cerrar en móvil */}
+            {mobile && (
+              <div onClick={() => setSidebarOpen(false)} style={{
+                position: "fixed", inset: 0, background: "rgba(0,0,0,.5)", zIndex: 40
+              }} />
+            )}
+            <div data-sidebar="true" style={{
+              width: mobile ? Math.min(window.innerWidth * 0.82, 300) : tablet ? 220 : 260,
+              background: T.white,
+              borderRight: `1px solid ${T.border}`,
+              padding: 20,
+              overflowY: "auto",
+              flexShrink: 0,
+              // Drawer en móvil
+              ...(mobile ? {
+                position: "fixed", top: 0, left: 0, bottom: 0, zIndex: 50,
+                boxShadow: "4px 0 24px rgba(0,0,0,.3)"
+              } : {})
+            }}>
             <div style={{ background: "#05200b", borderRadius: 12, padding: 16, marginBottom: 20, color: "#fff" }}>
               <div style={{ fontSize: 11, color: T.muted, textTransform: "uppercase", letterSpacing: 1, marginBottom: 4 }}>
                 {activeTab === "visitas" ? "Visitas filtradas" : "Registros filtrados"}
@@ -2321,7 +2358,14 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
                 return <div style={{ fontSize: 22, fontWeight: 900, color: T.navyMid }}>{hoy.length} <span style={{ fontSize: 12, fontWeight: 500, color: T.muted }}>movimientos</span></div>;
               })()}
             </div>
+            {mobile && (
+              <button onClick={() => setSidebarOpen(false)} style={{
+                marginTop: 16, width: "100%", padding: "11px", borderRadius: 8, border: "none",
+                background: T.navy, color: "#fff", fontWeight: 700, fontSize: 13, cursor: "pointer"
+              }}>✓ Aplicar filtros</button>
+            )}
           </div>
+          </>
         )}
 
         {/* Tab switcher + Movement/Visitas list */}
@@ -2895,11 +2939,10 @@ function AdminDashboard({ user, registros, sedes, empresas, onEdit, onDelete, on
           </div>
         </div>
       )}
+      </div>{/* end flex container */}
     </div>
   );
-}
-
-// ─── Comercial Proveedors Panel ─────────────────────────────────────────────────
+} ─────────────────────────────────────────────────
 function ComercialProveedorsPanel({ empresas, onUpdateProveedors }) {
   const [newEmp, setNewEmp] = useState("");
   const [empSearch, setEmpSearch] = useState("");
@@ -2929,7 +2972,7 @@ function ComercialProveedorsPanel({ empresas, onUpdateProveedors }) {
           <input value={empSearch} onChange={e => setEmpSearch(e.target.value)} placeholder="Buscar..."
             style={{ padding: "5px 10px", borderRadius: 8, border: `1px solid ${T.border}`, fontSize: 13, width: 130 }} />
         </div>
-        <div style={{ maxHeight: 360, overflowY: "auto" }}>
+        <div style={{ maxHeight: "45vh", overflowY: "auto" }}>
           {empFilt.map(e => (
             <div key={e.id} style={{ display: "flex", justifyContent: "space-between", alignItems: "center", padding: "10px 14px", borderBottom: `1px solid ${T.border}` }}>
               <span style={{ fontSize: 13, color: e.activa ? T.navyMid : T.muted, textDecoration: e.activa ? "none" : "line-through" }}>{e.nombre}</span>
@@ -2964,19 +3007,17 @@ function AdminPanel({ user, sedes, empresas, admins, viewers, guardias, comercia
   const sedeFilt = sedes.filter(s => s.nombre.toLowerCase().includes(sedeSearch.toLowerCase()));
 
   return (
-    <div style={{ minHeight: "100vh", background: T.bg }}>
-      <div style={{ background: T.navy, padding: "16px 20px", display: "flex", justifyContent: "space-between", alignItems: "center" }}>
-        <div>
-          <div style={{ display: "flex", alignItems: "center", gap: 10, marginBottom: 4 }}>
-            <img src={LOGO_SRC} alt="Cañaveral" style={{ height: 32, width: 32, borderRadius: "50%", objectFit: "cover", border: "2px solid rgba(255,255,255,.2)" }} />
-          </div>
-          <div style={{ color: "#fff", fontSize: 20, fontWeight: 800 }}>⚙️ Panel de Administración</div>
+    <div style={{ height: "100vh", overflowY: "auto", overflowX: "hidden", background: T.bg, WebkitOverflowScrolling: "touch" }}>
+      <div style={{ background: T.navy, padding: "10px 14px", display: "flex", justifyContent: "space-between", alignItems: "center", position: "sticky", top: 0, zIndex: 10 }}>
+        <div style={{ display: "flex", alignItems: "center", gap: 10 }}>
+          <img src={LOGO_SRC} alt="Cañaveral" style={{ height: 28, width: 28, borderRadius: "50%", objectFit: "cover", border: "2px solid rgba(255,255,255,.2)" }} />
+          <div style={{ color: "#fff", fontSize: mobile ? 15 : 20, fontWeight: 800 }}>⚙️ Panel de Administración</div>
         </div>
-        <button onClick={onClose} style={{ background: "rgba(255,255,255,.1)", border: "none", color: "#fff", padding: "10px 18px", borderRadius: 10, cursor: "pointer", fontWeight: 700 }}>← Volver</button>
+        <button onClick={onClose} style={{ background: "rgba(255,255,255,.1)", border: "none", color: "#fff", padding: mobile ? "7px 12px" : "10px 18px", borderRadius: 10, cursor: "pointer", fontWeight: 700, fontSize: mobile ? 12 : 14 }}>← Volver</button>
       </div>
 
-      {/* Tabs */}
-      <div style={{ background: T.white, borderBottom: `1px solid ${T.border}`, display: "flex", padding: "0 20px", overflowX: "auto" }}>
+      {/* Tabs — scroll horizontal, sticky */}
+      <div style={{ background: T.white, borderBottom: `1px solid ${T.border}`, display: "flex", padding: "0 4px", overflowX: "auto", position: "sticky", top: mobile ? 48 : 57, zIndex: 9, WebkitOverflowScrolling: "touch", scrollbarWidth: "none" }}>
         {[["empresas", "🏭 Proveedores", empresas.filter(e => e.activa).length],
           ["sedes", "📍 Sedes", sedes.filter(s => s.activa).length],
           ["guardias", "🛡️ Guardias", guardias.length],
@@ -2984,19 +3025,19 @@ function AdminPanel({ user, sedes, empresas, admins, viewers, guardias, comercia
           ["admins", "👑 Admins", admins.length],
           ["viewers", "👁️ Espectadores", viewers.length]].map(([t, l, c]) => (
           <button key={t} onClick={() => setTab(t)} style={{
-            padding: "14px 20px", border: "none", background: "none", cursor: "pointer", whiteSpace: "nowrap",
-            fontWeight: tab === t ? 800 : 500, fontSize: 14,
+            padding: mobile ? "9px 10px" : "12px 14px", border: "none", background: "none", cursor: "pointer", whiteSpace: "nowrap",
+            fontWeight: tab === t ? 800 : 500, fontSize: mobile ? 12 : 13,
             color: tab === t ? T.navy : T.slate,
             borderBottom: `3px solid ${tab === t ? T.brand : "transparent"}`,
-            display: "flex", alignItems: "center", gap: 8
+            display: "flex", alignItems: "center", gap: 4, flexShrink: 0
           }}>
-            {l}
-            <span style={{ background: tab === t ? T.amberLight : T.bg, color: tab === t ? "#92400e" : T.slate, borderRadius: 99, padding: "1px 7px", fontSize: 11, fontWeight: 700 }}>{c}</span>
+            {mobile ? l.split(" ")[0] : l}
+            <span style={{ background: tab === t ? T.amberLight : T.bg, color: tab === t ? "#92400e" : T.slate, borderRadius: 99, padding: "1px 6px", fontSize: 10, fontWeight: 700 }}>{c}</span>
           </button>
         ))}
       </div>
 
-      <div style={{ padding: 20, maxWidth: 640, margin: "0 auto" }}>
+      <div style={{ padding: mobile ? "12px 12px 60px" : "16px 16px 40px", maxWidth: 640, margin: "0 auto" }}>
         {/* PROVEEDORS */}
         {tab === "empresas" && (
           <div>
@@ -3044,7 +3085,7 @@ function AdminPanel({ user, sedes, empresas, admins, viewers, guardias, comercia
                 <input value={empSearch} onChange={e => setEmpSearch(e.target.value)} placeholder="Buscar..."
                   style={{ padding: "6px 10px", borderRadius: 8, border: `1px solid ${T.border}`, fontSize: 13, width: 140 }} />
               </div>
-              <div style={{ maxHeight: 420, overflowY: "auto" }}>
+              <div style={{ maxHeight: "45vh", overflowY: "auto" }}>
                 {empFilt.map(e => (
                   <div key={e.id} style={{
                     display: "flex", justifyContent: "space-between", alignItems: "center",
@@ -3113,7 +3154,7 @@ function AdminPanel({ user, sedes, empresas, admins, viewers, guardias, comercia
                 <input value={sedeSearch} onChange={e => setSedeSearch(e.target.value)} placeholder="Buscar..."
                   style={{ padding: "6px 10px", borderRadius: 8, border: `1px solid ${T.border}`, fontSize: 13, width: 140 }} />
               </div>
-              <div style={{ maxHeight: 420, overflowY: "auto" }}>
+              <div style={{ maxHeight: "45vh", overflowY: "auto" }}>
                 {sedeFilt.map(s => (
                   <div key={s.id} style={{ display: "flex", justifyContent: "space-between", alignItems: "center", padding: "11px 16px", borderBottom: `1px solid ${T.border}` }}>
                     <span style={{ fontSize: 13, color: s.activa ? T.navyMid : T.muted, textDecoration: s.activa ? "none" : "line-through" }}>{s.nombre}</span>
